# square_api_calls

./: README.md  __init__.py  find_item_sales.py  generate_readme.py  main.py  parse_invoices.py  pyproject.toml  square_client.py  square_order_info.py  test_locations.py  tipout.py  tipout_after_dark.py  tipout_main.py
extractors/: __init__.py  base.py  charcuterie_board.py  cheese_board.py  countdown.py  thanksgiving_board.py
parsers/: __init__.py  buyer_parser.py  item_parser.py
tipout/: __init__.py  aggregation.py  distribution.py  payments.py  reporting.py  timecards.py  utils.py
utils/: __init__.py  square_file_output.py
